--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,13 +7,14 @@
 
 body {
   font-family: sans-serif;
-  background-color: #f1efec;
+  background-color: aquamarine;
   overflow-x: hidden;
 }
 
 section {
   padding: 0 15px;
   max-width: 767px;
+  background-color: #f1efec;
 }
 
 @media screen and (min-width: 767px) {
@@ -64,7 +65,6 @@ section {
 }
 
 .buttons {
-  margin-top: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -74,6 +74,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 20px;
 }
 
 .buttons .actions {
